--- a/index.html
+++ b/index.html
@@ -1,22 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Group 4 Torrent Player</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nova</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #000;
+      color: #fff;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 4rem 1rem 2rem;
+    }
+    header h1 {
+      font-size: 3rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+    header p {
+      font-size: 1.25rem;
+      color: #aaa;
+    }
+    .panel {
+      max-width: 600px;
+      margin: 2rem auto;
+      background: rgba(255,255,255,0.05);
+      border-radius: 1rem;
+      padding: 2rem;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.8);
+    }
+    .panel h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+    input[type="text"] {
+      width: 100%;
+      padding: 0.75rem;
+      border: none;
+      border-radius: 0.5rem;
+      margin-bottom: 1rem;
+      font-size: 1rem;
+    }
+    button {
+      background: #fff;
+      color: #000;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s;
+      margin-right: 0.5rem;
+    }
+    button:hover {
+      background: #ddd;
+    }
+    .results {
+      margin-top: 2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      color: #666;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Group 4 Torrent Player</h1>
-  <form id="torrentForm">
-    <input id="torrentInput" type="text" placeholder="Paste magnet link or .torrent URL" required>
-    <button type="submit">Load</button>
-  </form>
-  
-  <!-- Torrent results -->
-  <div id="results"></div>
+  <header>
+    <h1>Nova</h1>
+    <p>Stream torrents directly in your browser.</p>
+  </header>
 
-  <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
-  <script src="app.js"></script>
+  <div class="panel">
+    <h2>Paste Magnet Link</h2>
+    <form id="torrentForm">
+      <input type="text" id="torrentInput" placeholder="Enter magnet link..." />
+      <button type="submit">Add</button>
+    </form>
+    <div class="results" id="results">
+      <p>No torrent loaded yet.</p>
+    </div>
+  </div>
+
+  <footer>
+    <p>© 2025 Nova</p>
+  </footer>
+
+  <script>
+    const form = document.getElementById('torrentForm');
+    const results = document.getElementById('results');
+
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      const input = document.getElementById('torrentInput').value.trim();
+      if (!input) {
+        results.innerHTML = '<p>Please enter a magnet link.</p>';
+        return;
+      }
+      results.innerHTML = `
+        <p><strong>Added magnet:</strong> ${input}</p>
+        <p>(Demo mode: torrent streaming will appear here on GitHub Pages)</p>
+      `;
+    });
+  </script>
 </body>
 </html>
